Use QUrl::toLocalFile() in GeoJsonData

Using QUrl::path() stoped working with local files because a leading "/"
was remaining in the path. Using QUrl::toLocalFile() works.

Fixes: QTBUG-121766
Pick-to: 6.7
Change-Id: I3711d3aa030d54981f9089c3c0a3d4e46279a1ef
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>